--- a/CuaHangBanPhuKien/app/src/main/res/layout/activity_dang_ky.xml
+++ b/CuaHangBanPhuKien/app/src/main/res/layout/activity_dang_ky.xml
@@ -1,93 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.DangNhapActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".Activity.DangNhapActivity">
+
     <TextView
-        android:padding="15dp"
-        android:textSize="20sp"
-        android:textColor="@color/black"
-        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Đăng ký tài khoản"/>
+        android:background="@color/primarycolor"
+        android:gravity="center"
+        android:padding="15dp"
+        android:text="Đăng ký tài khoản"
+        android:textColor="@color/white"
+        android:textSize="20sp" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="#4D000000"/>
+        android:background="#4D000000" />
+
     <ImageView
-        android:layout_marginTop="50dp"
-        android:layout_gravity="center"
         android:layout_width="96dp"
         android:layout_height="96dp"
-        android:src="@drawable/shopee_48px"/>
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/shopee_48px" />
+
     <EditText
         android:id="@+id/edt_tendangnhap"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:gravity="center"
-        android:drawableLeft="@drawable/ic_person"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:hint="Tên đăng nhập"/>
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:drawableLeft="@drawable/ic_person"
+        android:gravity="center"
+        android:hint="Tên đăng nhập" />
+
     <EditText
 
         android:id="@+id/edt_matkhau"
-        android:inputType="textPassword"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:gravity="center"
-        android:drawableLeft="@drawable/ic_lock"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:hint="Mật khẩu"/>
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:drawableLeft="@drawable/ic_lock"
+        android:gravity="center"
+        android:hint="Mật khẩu"
+        android:inputType="textPassword" />
+
     <EditText
         android:id="@+id/edt_hoten"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:gravity="center"
         android:drawableLeft="@drawable/ic_note"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:hint="Họ tên"/>
-    <TextView
-        android:textSize="18sp"
-        android:id="@+id/edt_ngaysinh"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
         android:gravity="center"
-        android:drawableLeft="@drawable/ic_date"
+        android:hint="Họ tên" />
+
+    <TextView
+        android:id="@+id/edt_ngaysinh"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:hint="Ngày sinh"/>
-    <View
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:drawableLeft="@drawable/ic_date"
+        android:gravity="center"
+        android:hint="Ngày sinh"
+        android:textSize="18sp" />
+
+    <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#000000"/>
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="#000000" />
+
     <Button
-        android:layout_marginTop="5dp"
-        android:background="@color/primarycolor"
         android:id="@+id/btn_dangky"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="20dp"
+        android:background="@color/primarycolor"
         android:text="Đăng ký"
         android:textAllCaps="false"
-        android:textSize="18sp"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        android:textSize="18sp" />
+
     <TextView
         android:id="@+id/btn_dangnhap"
-        android:textSize="15sp"
-        android:textColor="#2196F3"
-        android:layout_marginLeft="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Trở về đăng nhập"/>
+        android:layout_marginLeft="20dp"
+        android:text="Trở về đăng nhập"
+        android:textColor="#2196F3"
+        android:textSize="15sp" />
 </LinearLayout>
