--- a/CuaHangBanPhuKien/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/CuaHangBanPhuKien/app/src/main/res/layout/activity_dang_nhap.xml
@@ -7,9 +7,10 @@
     tools:context=".Activity.DangNhapActivity"
     android:orientation="vertical">
     <TextView
+        android:background="@color/primarycolor"
         android:padding="15dp"
         android:textSize="20sp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
