--- a/CuaHangPhuKienDienThoai/Areas/Admin/Views/DonHangs/Index.cshtml
+++ b/CuaHangPhuKienDienThoai/Areas/Admin/Views/DonHangs/Index.cshtml
@@ -5,15 +5,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.TaiKhoan1.MatKhau)
+            @Html.DisplayNameFor(model => model.TaiKhoan)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.DiaChi)
@@ -27,26 +23,29 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.TaiKhoan1.MatKhau)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DiaChi)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SDT)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TinhTrang)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+<tr>
+    <th>
+        @Html.DisplayFor(modelItem => item.TaiKhoan)
+    </th>
+    <td>
+        @Html.DisplayFor(modelItem => item.DiaChi)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.SDT)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.TinhTrang)
+    </td>
+    <td>
+    <td>
+       
+        <a href="@Url.Action("Index", "ChiTietDonHangs", new {id = item.ID})" class="btn btn-success">Chi tiết đơn hàng</a>
+      
+    </td>
+    </td>
+</tr>
+    }
 
 </table>
