--- a/CuaHangBanPhuKien/app/src/main/res/layout/fragment_gio_hang.xml
+++ b/CuaHangBanPhuKien/app/src/main/res/layout/fragment_gio_hang.xml
@@ -43,15 +43,20 @@
         android:layout_height="match_parent"
         android:layout_above="@id/btn_dathang"
         android:layout_below="@id/view"
-        android:layout_margin="5dp" />
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp" />
 
     <Button
         android:id="@+id/btn_dathang"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:layout_margin="5dp"
-        android:layout_marginBottom="-2dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@color/primarycolor"
         android:text="Đặt hàng"
         android:textColor="@color/white" />
