--- a/CuaHangBanPhuKien/app/src/main/res/layout/fragment_trang_chu.xml
+++ b/CuaHangBanPhuKien/app/src/main/res/layout/fragment_trang_chu.xml
@@ -123,7 +123,7 @@
             <GridView
                 android:id="@+id/gv_sanpham"
                 android:layout_width="match_parent"
-                android:layout_height="1000dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:numColumns="2" />
         </LinearLayout>
