--- a/CuaHangBanPhuKien/app/src/main/res/layout/item_giohang.xml
+++ b/CuaHangBanPhuKien/app/src/main/res/layout/item_giohang.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <ImageView
+        android:src="@drawable/shopee_48px"
         android:id="@+id/image"
         android:layout_width="80dp"
         android:layout_height="80dp"
