--- a/CuaHangPhuKienDienThoai/Views/Shared/_Layout.cshtml
+++ b/CuaHangPhuKienDienThoai/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("Application name", "Index", "Home", new {area = ""}, new {@class = "navbar-brand"})
+            @Html.ActionLink("Cửa hàng phụ kiện điện thoại", "Index", "Home", new {area = ""}, new {@class = "navbar-brand"})
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -25,7 +25,7 @@
                 <li>@Html.ActionLink("Hãng sản xuất", "Index", "HangSanXuats", new {area = "Admin"}, null)</li>
                 <li>@Html.ActionLink("Loại sản phẩm", "Index", "LoaiSanPhams", new {area = "Admin"}, null)</li>
                 <li>@Html.ActionLink("Sản phẩm", "Index", "SanPhams", new {area = "Admin"}, null)</li>
-                <li>@Html.ActionLink("Chi tiết sản phẩm", "Index", "ChiTietSanPhams", new {area = "Admin"}, null)</li>
+                <li>@Html.ActionLink("Đơn hàng", "Index", "DonHangs", new {area = "Admin"}, null)</li>
                 <li>@Html.ActionLink("Tài khoản", "Index", "TaiKhoans", new {area = "Admin"}, null)</li>
             </ul>
         </div>
